# shhh

./: CLAUDE.md  Cargo.toml  README.md
etc/: config.default.toml
site/: CLAUDE.md  PRD.md  index.html  package.json  tsconfig.json  vite.config.ts
site/src/: App.tsx  audio.ts  consts.ts  global.css  main.tsx
site/src/components/: AlgorithmSection.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  InstallSection.tsx  InstrumentDisplay.tsx  LoudnessDiagram.tsx  Nav.tsx  Shhh.tsx  TabGroup.tsx
site/src/hooks/: useScrollReveal.ts
site/src/styles/: colors.stylex.ts  common.ts  spacing.stylex.ts  typography.stylex.ts
src/: audio.rs  calibrate.rs  config.rs  db.rs  devices.rs  loudness.rs  main.rs  notify.rs  prompt.rs  style.rs
