[package]
name = "shhh"
version = "1.1.0"
authors = ["Wes Roberts <takq@a.zinc.email>"]
edition = "2024"
description = "Get alerts when you are too loud"
keywords = ["sound", "monitoring", "alert"]
categories = ["command-line-utilities"]
repository = "https://github.com/jchook/shhh"
license = "MIT"
exclude = [
  "/.github/",
  "/assets/alert.wav",
]

[[bin]]
name = "shhh"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
cpal = "0.15.3"
directories = "6.0.0"
notify-rust = "4"
rodio = "0.20.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
toml_edit = "0.25.9"

[dev-dependencies]
tempfile = "3.27.0"

